@@ -2,44 +2,41 @@ package com.academicpath.backend.service.impl;
 
 import com.academicpath.backend.dto.request.ActividadRequest;
 import com.academicpath.backend.dto.response.ActividadResponse;
+import com.academicpath.backend.entity.Actividad;
+import com.academicpath.backend.entity.UsuarioMateria;
 import com.academicpath.backend.exception.ActividadException;
 import com.academicpath.backend.exception.ResourceNotFoundException;
-import com.academicpath.backend.mapper.ActividadesMapper;
-import com.academicpath.backend.models.entity.Actividades;
-import com.academicpath.backend.models.entity.UsuarioMaterias;
-import com.academicpath.backend.repository.ActividadesRepository;
-import com.academicpath.backend.repository.UsuarioMateriasRepository;
+import com.academicpath.backend.mapper.ActividadMapper;
+import com.academicpath.backend.repository.ActividadRepository;
+import com.academicpath.backend.repository.UsuarioMateriaRepository;
 import com.academicpath.backend.service.ActividadService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ActividadServiceImpl implements ActividadService {
 
     @Autowired
-    private ActividadesRepository actividadesRepository;
+    private ActividadRepository actividadRepository;
 
     @Autowired
-    private UsuarioMateriasRepository usuarioMateriasRepository;
+    private UsuarioMateriaRepository usuarioMateriaRepository;
 
     @Autowired
-    private ActividadesMapper actividadesMapper;
+    private ActividadMapper actividadMapper;
 
     @Override
     @Transactional
     public ActividadResponse crear(ActividadRequest request) {
-        UsuarioMaterias usuarioMateria = usuarioMateriasRepository.findById(request.getUsuarioMateriaId())
+        UsuarioMateria usuarioMateria = usuarioMateriaRepository.findById(request.getUsuarioMateriaId())
                 .orElseThrow(() -> new ResourceNotFoundException("Usuario-Materia no encontrada con id: " + request.getUsuarioMateriaId()));
 
-        if (request.getPeso() < 0 || request.getPeso() > 100) {
-            throw new ActividadException("El peso de la actividad debe estar entre 0 y 100");
-        }
+        validarPeso(request.getPeso());
 
-        Actividades actividad = Actividades.builder()
+        Actividad actividad = Actividad.builder()
                 .usuarioMateria(usuarioMateria)
                 .titulo(request.getTitulo())
                 .tipo(request.getTipo())
@@ -48,34 +45,33 @@ public class ActividadServiceImpl implements ActividadService {
                 .fechaEntrega(request.getFechaEntrega())
                 .build();
 
-        Actividades actividadGuardada = actividadesRepository.save(actividad);
-        return actividadesMapper.toResponse(actividadGuardada);
+        return actividadMapper.toResponse(actividadRepository.save(actividad));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ActividadResponse obtenerPorId(Long id) {
-        Actividades actividad = actividadesRepository.findById(id)
+        return actividadRepository.findById(id)
+                .map(actividadMapper::toResponse)
                 .orElseThrow(() -> new ResourceNotFoundException("Actividad no encontrada con id: " + id));
-        return actividadesMapper.toResponse(actividad);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ActividadResponse> obtenerPorUsuarioMateria(Long usuarioMateriaId) {
-        return actividadesRepository.findByUsuarioMateriaId(usuarioMateriaId)
+        return actividadRepository.findByUsuarioMateriaId(usuarioMateriaId)
                 .stream()
-                .map(actividadesMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(actividadMapper::toResponse)
+                .toList();
     }
 
     @Override
     @Transactional
     public ActividadResponse actualizar(Long id, ActividadRequest request) {
-        Actividades actividad = actividadesRepository.findById(id)
+        Actividad actividad = actividadRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Actividad no encontrada con id: " + id));
 
-        if (request.getPeso() < 0 || request.getPeso() > 100) {
-            throw new ActividadException("El peso de la actividad debe estar entre 0 y 100");
-        }
+        validarPeso(request.getPeso());
 
         actividad.setTitulo(request.getTitulo());
         actividad.setTipo(request.getTipo());
@@ -83,16 +79,20 @@ public class ActividadServiceImpl implements ActividadService {
         actividad.setNotaMaxima(request.getNotaMaxima());
         actividad.setFechaEntrega(request.getFechaEntrega());
 
-        Actividades actividadActualizada = actividadesRepository.save(actividad);
-        return actividadesMapper.toResponse(actividadActualizada);
+        return actividadMapper.toResponse(actividadRepository.save(actividad));
     }
 
     @Override
     @Transactional
     public void eliminar(Long id) {
-        Actividades actividad = actividadesRepository.findById(id)
+        Actividad actividad = actividadRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Actividad no encontrada con id: " + id));
-        actividadesRepository.delete(actividad);
+        actividadRepository.delete(actividad);
+    }
+
+    private void validarPeso(Double peso) {
+        if (peso < 0 || peso > 100) {
+            throw new ActividadException("El peso de la actividad debe estar entre 0 y 100");
+        }
     }
 }
-
